<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.projectslist.ProjectsListActivity">

    <TextView
        android:id="@+id/tvTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/edittext_background"
        android:inputType="text"
        android:textSize="16sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDeadlineLabel"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Project 1" />

    <TextView
        android:id="@+id/tvDeadlineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/end_to"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <TextView
        android:id="@+id/tvDeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:minWidth="64dp"
        android:text="@string/empty_deadline"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/tvDeadlineLabel"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <ImageView
        android:id="@+id/ivCalendar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/ic_calendar"
        app:layout_constraintStart_toEndOf="@id/tvDeadline"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <TextView
        android:id="@+id/tvDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCalendar" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/edittext_background"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDeadlineLabel"
        app:layout_constraintTop_toBottomOf="@id/ivCalendar"
        tools:text="@tools:sample/lorem[150]" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>